<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crime_title_label"
            android:id="@+id/title"/>
    <EditText
            android:id="@+id/crime_title"
            android:layout_width="match_parent"
            android:layout_height="245dp"
            android:hint="@string/crime_title_hint" android:text="Писать сюда"/>

    <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crime_details_label" android:id="@+id/date_create"/>

    <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crime_details_label" android:id="@+id/date_change"/>


    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pioritet"
                android:layout_weight="1"
                android:entries="@array/stringsPrioritet"
        />

        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progress"
                android:layout_weight="1"
                android:entries="@array/stringsProgress"
        />
    </LinearLayout>

    <Button
            android:id="@+id/crime_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crime_report_text"/>

    <Button
            android:id="@+id/finsh_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finihs_job"/>
</LinearLayout>